# tte

./: .gitignore  CMakeLists.txt  README.md  TTE.code-workspace
include/: keycodes.h  rawIO.h  terminal.h  textEditor.h  tte.h
src/: main.c  rawIO.c  terminal.c  textEditor.c  tte.c
